--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         let frameCounter = 0;
         let isPlaying = false;
         const audio = document.getElementById("clap");
+        audio.load();
         let outFrame = 0;
 
         paper.install(window);
