--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 </head>
 
 <body>
-    <audio id="clap">
-        <source src="hihat.mp3" type="audio/mpeg">
-        <source src="hihat.ogg" type="audio/ogg">
+    <audio id="clap">        
+        <source src="hihat.wav" type="audio/wav">
     </audio>
     <canvas id="myCanvas" resize></canvas>
     <div id="controls">
