add common framerates of 48 and 49.97

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             <option>24</option>
             <option>25</option>
             <option selected>30</option>
+            <option>48</option>
+            <option>49.97</option>
             <option>50</option>
             <option>60</option>
         </select>
